--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -5,6 +5,15 @@
     <title></title>
 </head>
 <body>
-
+    <table>
+    {% for info_row in info %}
+    <tr>
+        <td>{{ info_row.name }}</td>
+        <td>{{ info_row.prize_positions_count }}</td>
+        <td>{{ info_row.players_count }}</td>
+        <td>{{ info_row.tour_count }}</td>
+    </tr>
+    {% endfor %}
+    </table>
 </body>
 </html>
