--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -9,9 +9,9 @@
     {% for info_row in info %}
     <tr>
         <td>{{ info_row.name }}</td>
-        <td>{{ info_row.prize_positions_count }}</td>
-        <td>{{ info_row.players_count }}</td>
-        <td>{{ info_row.tour_count }}</td>
+        <td>{{ info_row.prize_positions_amount }}</td>
+        <td>{{ info_row.players_amount }}</td>
+        <td>{{ info_row.tours_amount }}</td>
     </tr>
     {% endfor %}
     </table>
