--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -5,10 +5,13 @@
     <title></title>
 </head>
 <body>
+    <div style="background-color: #1e90ff;color: white;width: 100%;height: 30px;text-align: center;">
+        Список всех турниров
+    </div>
     <table>
     {% for info_row in info %}
     <tr>
-        <td>{{ info_row.name }}</td>
+        <td><a href="/tournaments/{{ info_row.id }}/">{{ info_row.name }}</a> </td>
         <td>{{ info_row.prize_positions_amount }}</td>
         <td>{{ info_row.players_amount }}</td>
         <td>{{ info_row.tours_amount }}</td>
