--- a/templates/tournament/master_page.html
+++ b/templates/tournament/master_page.html
@@ -2,4 +2,5 @@
 {% block includes %}
 {{ block.super }}
     <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/table.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/main.css" type="text/css" media="screen" />
 {% endblock %}
