--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -1,22 +1,23 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    <div style="background-color: #1e90ff;color: white;width: 100%;height: 30px;text-align: center;">
-        Список всех турниров
-    </div>
-    <table>
+{% extends 'tournament/master_page.html' %}
+{% block body %}
+<table class="tournament_table">
+    <thead>
+        <th></th>
+        <th>Название</th>
+        <th>Призов</th>
+        <th>Участников</th>
+        <th>Туров</th>
+    </thead>
     {% for info_row in info %}
-    <tr>
-        <td><a href="/tournaments/{{ info_row.id }}/">{{ info_row.name }}</a> </td>
-        <td>{{ info_row.prize_positions_amount }}</td>
-        <td>{{ info_row.players_amount }}</td>
-        <td>{{ info_row.tours_amount }}</td>
-    </tr>
+        <tr>
+            <td><a href="/tournaments/{{ info_row.id }}/">
+                <img src="{{ STATIC_PREFIX }}img/arrow_right_green.png"></a></td>
+            <td>{{ info_row.name }}</td>
+            <td>{{ info_row.prize_positions_amount }}</td>
+            <td>{{ info_row.players_amount }}</td>
+            <td>{{ info_row.tours_amount }}</td>
+        </tr>
     {% endfor %}
-    </table>
-</body>
-</html>
+</table>
+{% endblock %}
+
