--- a/templates/tournament/details.html
+++ b/templates/tournament/details.html
@@ -5,7 +5,7 @@
         <p>Количество призовых мест: {{ info.prizes }}</p>
         <p>Количество участников: {{ info.players_count }}</p>
     </div>
-    <table class="tournament_table">
+    <table class="tablesorter">
         <thead>
             <th></th>
             <th>Номер тура</th>
