--- a/templates/tournament/master_page.html
+++ b/templates/tournament/master_page.html
@@ -1,6 +1,17 @@
 {% extends 'master_page.html' %}
 {% block includes %}
 {{ block.super }}
-    <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/table.css" type="text/css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/tablesorter/style.css">
     <link rel="stylesheet" href="{{ STATIC_PREFIX }}css/main.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="{{ STATIC_PREFIX }}js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_PREFIX }}js/jquery.tablesorter.min.js"></script>
+    <script>
+        $(document).ready(function()
+                {
+                    $(".tablesorter").tablesorter({
+                        widgets: ['zebra']
+                    });
+                }
+        );
+    </script>
 {% endblock %}
