--- a/templates/tour/details.html
+++ b/templates/tour/details.html
@@ -1,6 +1,6 @@
 {% extends 'tournament/master_page.html' %}
 {% load player_tags %}
-{% block body %}
+{% block content %}
     <table class="tablesorter">
         <thead>
         <th>Участник 1</th>
