--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -1,5 +1,5 @@
 {% extends 'tournament/master_page.html' %}
-{% block body %}
+{% block content %}
 <table class="tablesorter">
     <thead>
         <th></th>
@@ -22,4 +22,3 @@
     </tbody>
 </table>
 {% endblock %}
-
