--- a/templates/tournament/ratings.html
+++ b/templates/tournament/ratings.html
@@ -3,7 +3,7 @@
     {{ block.super }}
 
 {% endblock %}
-{% block body %}
+{% block content %}
     <table class="tablesorter">
         <thead>
         <tr>
