--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -19,8 +19,10 @@
     </div>
     <div class="sidebar_right">
     {% block sidebar %}
-        <a href="/tournaments/">Туриниры</a>
-        <a href="/players/rating/">Рейтинг Эло</a>
+        <ul class="linklist">
+            <li><a href="/tournaments/">Туриниры</a></li>
+            <li><a href="/players/rating/">Рейтинг Эло</a></li>
+        </ul>
     {% endblock %}
     </div>
 </div>
