--- a/templates/tournament/create.html
+++ b/templates/tournament/create.html
@@ -1,10 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'master_page.html' %}
+{% block content %}
+    <div class="post">
+        <h2 class="title">Добавить турнир</h2>
+        <form action="/tournaments/create/" method="POST">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+            <div class="input_field">
+                <ul>
+                    <li>{{ form.name.label }}</li>
+                    <li>{{ form.name.errors}}</li>
+                    <li>{{ form.name }}</li>
+                </ul>
+            </div>
+            <div class="input_field">
+                <ul>
+                    <li>{{ form.prize_positions_amount.label }}</li>
+                    <li>{{ form.prize_positions_amount.errors }}</li>
+                    <li>{{ form.prize_positions_amount }}</li>
+                </ul>
+            </div>
+            <input type="submit" value="Добавить">
+        </form>
+    </div>
+{% endblock %}
