--- a/templates/tournament/details.html
+++ b/templates/tournament/details.html
@@ -1,28 +1,12 @@
 {% extends 'tournament/master_page.html' %}
+{% block title %}Турнир {{ info.name }}{% endblock %}
 {% block content %}
-    <div class="tournament_info">
+    <div class="post">
+        <p><h2 class="title">Детали турнира {{ info.name }}</h2></p>
         <p>Название турнира: {{ info.name }}</p>
         <p>Количество призовых мест: {{ info.prizes }}</p>
         <p>Количество участников: {{ info.players_count }}</p>
     </div>
-    <table class="tablesorter">
-        <thead>
-            <th></th>
-            <th>Номер тура</th>
-            <th>Всего игр</th>
-            <th>Сыграно</th>
-        </thead>
-        <tbody>
-        {% for tour in info.tours_list %}
-            <tr>
-                <td><a href="/tours/{{ tour.id }}/" class="button_details">Переход</a> </td>
-                <td>{{ tour.tour_number }}</td>
-                <td>{{ tour.game_amount }}</td>
-                <td>{{ tour.game_done_amount }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 {% endblock %}
 {% block sidebar %}
     {{ block.super }}
