--- a/templates/tournament/details_inactive.html
+++ b/templates/tournament/details_inactive.html
@@ -39,7 +39,7 @@
                     <li>{{ sign_existing.players }}</li>
                 </ul>
                 </div>
-                <input type="button" value="Добавить" name="button_sign_existing">
+                <input type="submit" value="Добавить" name="button_sign_existing">
             </form>
         </div>
         <div style="clear: both; background-color: #000000;"></div>
