--- a/templates/tournament/details.html
+++ b/templates/tournament/details.html
@@ -20,7 +20,7 @@
                     <td>{{ tour.game_amount }}</td>
                     <td>{{ tour.game_done_amount }}</td>
                     <td>
-                        <a href="/tours/{{ tour.id }}" class="button">Переход</a>
+                        <a href="/tours/{{ tour.id }}" class="button_in_table">Переход</a>
                     </td>
                 </tr>
             {% endfor %}
