--- a/templates/tournament/details_inactive.html
+++ b/templates/tournament/details_inactive.html
@@ -56,8 +56,8 @@
                     <td>{{ player.name }}</td>
                     <td>{{ player.elo_rating }}</td>
                     <td>
-                        <a href="/players/{{ player.id }}/" class="button">Профиль</a>
-                        <a href="" class="button">Исключить</a>
+                        <a href="/players/{{ player.id }}/" class="button_in_table">Профиль</a>
+                        <a href="" class="button_in_table">Исключить</a>
                     </td>
                 </tr>
             {% endfor %}
