--- a/templates/tournament/inactive.html
+++ b/templates/tournament/inactive.html
@@ -6,18 +6,18 @@
         <div class="entry">
             <table class="tablesorter">
                 <thead>
-                <th></th>
                 <th>Название</th>
                 <th>Призов</th>
                 <th>Участников</th>
+                <th></th>
                 </thead>
                 <tbody>
                 {% for info_row in info %}
                     <tr>
-                        <td><a class="button" href="/tournaments/{{ info_row.id }}/inactive/">Просмотр</a></td>
                         <td>{{ info_row.name }}</td>
                         <td>{{ info_row.prize_positions_amount }}</td>
                         <td>{{ info_row.players_amount }}</td>
+                        <td><a class="button_in_table" href="/tournaments/{{ info_row.id }}/inactive/">Просмотр</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
