--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -49,10 +49,11 @@
             <li>
                 <h2>Полезные ссылки</h2>
                 <ul>
+                    <li><a href="ru.wikipedia.org/wiki/Швейцарская_система">Швейцарская система</a></li>
                     <li><a href="www.fide.com">FIDE</a></li>
-                    <li><a href="#">Consectetuer adipiscing elit</a></li>
-                    <li><a href="#">Metus aliquam pellentesque</a></li>
-                    <li><a href="#">Suspendisse iaculis mauris</a></li>
+                    <li><a href="http://www.fide.com/component/handbook/?id=86&view=article">
+                        Система Бурштейна</a></li>
+                    <li><a href="http://senseis.xmp.net/?GroupPairing">Группировка участников</a></li>
                     <li><a href="#">Urnanet non molestie semper</a></li>
                     <li><a href="#">Proin gravida orci porttitor</a></li>
                 </ul>
