--- a/templates/tournament/details_inactive.html
+++ b/templates/tournament/details_inactive.html
@@ -48,7 +48,7 @@
             <thead>
             <th>Имя</th>
             <th>Рейтинг Эло</th>
-            <th></th>
+            <th class="nosort"></th>
             </thead>
             <tbody>
             {% for player in info.players %}
