--- a/templates/tournament/inactive.html
+++ b/templates/tournament/inactive.html
@@ -9,7 +9,7 @@
                 <th>Название</th>
                 <th>Призов</th>
                 <th>Участников</th>
-                <th></th>
+                <th class="nosort"></th>
                 </thead>
                 <tbody>
                 {% for info_row in info %}
