--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -10,7 +10,7 @@
                 <th>Призов</th>
                 <th>Участников</th>
                 <th>Туров</th>
-                <th></th>
+                <th class="nosort"></th>
             </thead>
             <tbody>
             {% for info_row in info %}
