--- a/templates/tournament/details.html
+++ b/templates/tournament/details.html
@@ -6,12 +6,18 @@
         <p>Название турнира: {{ info.name }}</p>
         <p>Количество призовых мест: {{ info.prizes }}</p>
         <p>Количество участников: {{ info.players_count }}</p>
+        {% if info.finished %}
+            <p>Завершен</p>
+        {% endif %}
+        <div class="button_panel">
+            <p><a href="/tournaments/{{ info.id }}/rating/" class="button">Результаты</a></p>
+        </div>
         <table class="tablesorter">
             <thead>
             <th>Номер тура</th>
             <th>Количество игр</th>
-            <th>Сыграных игр
-            <th></th>
+            <th>Сыграных игр</th>
+            <th class="nosort"></th>
             </thead>
             <tbody>
             {% for tour in info.tours_list%}
