elo_rating_updated

--- a/static/css/darkera.css
+++ b/static/css/darkera.css
@@ -485,7 +485,7 @@ input[type="text"]:focus {
 }
 
 .button_in_table:hover {
-    color: black;
+    color: white;
     background: url(../img/img03.jpg) repeat-x left top;
     text-decoration: none;
 }
