--- a/templates/master_page.html
+++ b/templates/master_page.html
@@ -49,8 +49,8 @@
             <li>
                 <h2>Полезные ссылки</h2>
                 <ul>
-                    <li><a href="ru.wikipedia.org/wiki/Швейцарская_система">Швейцарская система</a></li>
-                    <li><a href="www.fide.com">FIDE</a></li>
+                    <li><a href="http://ru.wikipedia.org/wiki/Швейцарская_система">Швейцарская система</a></li>
+                    <li><a href="http://www.fide.com">FIDE</a></li>
                     <li><a href="http://www.fide.com/component/handbook/?id=86&view=article">
                         Система Бурштейна</a></li>
                     <li><a href="http://senseis.xmp.net/?GroupPairing">Группировка участников</a></li>
@@ -60,8 +60,7 @@
             </li>
         </ul>
     </div>
-    <!-- end #sidebar -->
-            {% endblock %}
+    {% endblock %}
     <div style="clear: both; background-color: #000000;">&nbsp;</div>
 
      </div>
@@ -69,7 +68,7 @@
     </div>
  </div>
 <div id="footer">
-    <p>Copyright (c) 2012 Sitename.com. All rights reserved. Design by <a href="http://www.freecsstemplates.org/">FCT</a>.</p>
+    <p>Copyright (c) 2012 Sitename.com</p>
 </div>
 </body>
 </html>
